--- a/friends.html
+++ b/friends.html
@@ -35,16 +35,37 @@
         <i class="fa-solid fa-circle-info"></i> Friend's Names Display
         <i class="fa-solid fa-chevron-right fa-xs"></i>
     </a>
-    <div class="user-component">
-        <div class="user-component__column">
-            <img src="https://avatars.githubusercontent.com/u/29245056?s=200&v=4" class="user-component__avatar"/>
-            <div class="user-component__text">
-                <h4 class="user-component__title">Nicolas</h4>
-                <h6 class="user-component__subtitle">this text whatever</h6>
+
+    <main class="friends-screen">
+        <div class="user-component">
+            <div class="user-component__column">
+                <img src="https://avatars.githubusercontent.com/u/29245056?s=200&v=4" class="user-component__avatar user-component__avatar--xl"/>
+                <div class="user-component__text">
+                    <h4 class="user-component__title">Nicolas</h4>
+                    <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+                </div>
+            </div>
+            <div class="user-component__column"></div>
+        </div>
+        <div class="friends-screen__channel">
+            <div class="friends-screen_channel-header">
+                <span>Channel</span>
+                <i class="fa-solid fa-chevron-up fa-xs"></i>
+            </div>
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img src="https://avatars.githubusercontent.com/u/29245056?s=200&v=4" class="user-component__avatar user-component__avatar--sm"/>
+                    <div class="user-component__text">
+                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span>2</span>
+                    <i class="fa-solid fa-chevron-right fa-xs"></i>
+                </div>
             </div>
         </div>
-        <div class="user-component__column"></div>
-    </div>
+    </main>
 
     <nav class="nav">
         <ul class="nav__list">
