--- a/friends.html
+++ b/friends.html
@@ -75,18 +75,18 @@
                 </a>
             </li>
             <li class="nav__btn">
-                <a class="nav__link" href="#">
+                <a class="nav__link" href="chats.html">
                     <span class="nav__notification">1</span>
                     <i class="fa-regular fa-comment fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
-                <a class="nav__link" href="#">
+                <a class="nav__link" href="find.html">
                     <i class="fa-solid fa-magnifying-glass fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
-                <a class="nav__link" href="#">
+                <a class="nav__link" href="more.html">
                     <i class="fa-solid fa-ellipsis fa-2x"></i>
                 </a>
             </li>
