--- a/chats.html
+++ b/chats.html
@@ -40,11 +40,24 @@
                     <h4 class="user-component__title">Nicolas</h4>
                     <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
                 </div>
-                <div>
-
+            </div>
+            <div class="user-component__column">
+                <span class="user-component__time">21:22</span>
+                <div class="badge">1</div>
+            </div>
+        </div>
+        <div class="user-component">
+            <div class="user-component__column">
+                <img src="https://avatars.githubusercontent.com/u/29245056?s=200&v=4" class="user-component__avatar"/>
+                <div class="user-component__text">
+                    <h4 class="user-component__title">Nicolas</h4>
+                    <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
                 </div>
             </div>
-            <div class="user-component__column"></div>
+            <div class="user-component__column">
+                <span class="user-component__time">21:22</span>
+                <div class="badge">1</div>
+            </div>
         </div>
     </main>
 
@@ -57,7 +70,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
-                    <span class="nav__notification">1</span>
+                    <span class="nav__notification badge">1</span>
                     <i class="fa-solid fa-comment fa-2x"></i>
                 </a>
             </li>
