--- a/more.html
+++ b/more.html
@@ -29,7 +29,7 @@
             <span><i class="fa-solid fa-music fa-2x"></i></span>
             <span>
                 <span class="screen-header__notification"></span>
-                <i class="fa-solid fa-gear fa-2x"></i>
+                <a href="settings.html"><i class="fa-solid fa-gear fa-2x"></i></a>
             </span>
         </div>
     </header>
@@ -83,6 +83,18 @@
                         <i class="fa-solid fa-quote-right"></i>
                     </div>
                     <span class="more-suggestions__icon-txt">Kokoa Story</span>
+                </div>
+                <div class="more-suggestions__icon">
+                    <div class="more-suggestions__icon-image">
+                        <i class="fa-solid fa-quote-right"></i>
+                    </div>
+                    <span class="more-suggestions__icon-txt">Kokoa Friends</span>
+                </div>
+                <div class="more-suggestions__icon">
+                    <div class="more-suggestions__icon-image">
+                        <i class="fa-solid fa-quote-right"></i>
+                    </div>
+                    <span class="more-suggestions__icon-txt">Friends Gem</span>
                 </div>
             </div>
         </div>
