--- a/chats.html
+++ b/chats.html
@@ -28,37 +28,41 @@
             <span><i class="fa-solid fa-magnifying-glass fa-2x"></i></span>
             <span><i class="fa-regular fa-comment-dots fa-2x"></i></span> 
             <span><i class="fa-solid fa-music fa-2x"></i></span>
-            <span><i class="fa-solid fa-gear fa-2x"></i></span> 
+            <span><a href="settings.html"><i class="fa-solid fa-gear fa-2x"></i></a></span> 
         </div>
     </header>
 
     <main class="main-screen">
-        <div class="user-component">
-            <div class="user-component__column">
-                <img src="https://avatars.githubusercontent.com/u/29245056?s=200&v=4" class="user-component__avatar"/>
-                <div class="user-component__text">
-                    <h4 class="user-component__title">Nicolas</h4>
-                    <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+        <a href="chat.html">
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img src="https://avatars.githubusercontent.com/u/29245056?s=200&v=4" class="user-component__avatar"/>
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">Nicolas</h4>
+                        <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span class="user-component__time">21:22</span>
+                    <div class="badge">1</div>
                 </div>
             </div>
-            <div class="user-component__column">
-                <span class="user-component__time">21:22</span>
-                <div class="badge">1</div>
-            </div>
-        </div>
-        <div class="user-component">
-            <div class="user-component__column">
-                <img src="https://avatars.githubusercontent.com/u/29245056?s=200&v=4" class="user-component__avatar"/>
-                <div class="user-component__text">
-                    <h4 class="user-component__title">Nicolas</h4>
-                    <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+        </a>
+        <a href="chat.html">
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img src="https://avatars.githubusercontent.com/u/29245056?s=200&v=4" class="user-component__avatar"/>
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">Nicolas</h4>
+                        <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span class="user-component__time">21:22</span>
+                    <div class="badge">1</div>
                 </div>
             </div>
-            <div class="user-component__column">
-                <span class="user-component__time">21:22</span>
-                <div class="badge">1</div>
-            </div>
-        </div>
+        </a>
     </main>
 
     <nav class="nav">
