--- a/friends.html
+++ b/friends.html
@@ -27,7 +27,7 @@
         <div class="screen-header__icons">
             <span><i class="fa-solid fa-magnifying-glass fa-2x"></i></span> 
             <span><i class="fa-solid fa-music fa-2x"></i></span>
-            <span><i class="fa-solid fa-gear fa-2x"></i></span> 
+            <span><a href="settings.html"><i class="fa-solid fa-gear fa-2x"></i></a></span> 
         </div>
     </header>
 
