--- a/settings.html
+++ b/settings.html
@@ -22,19 +22,44 @@
         </div>
     </div>
 
-    <!--<header class="screen-header">
-        <h1 class="screen-header__title">More</h1>
-        <div class="screen-header__icons">
-            <span><i class="fa-solid fa-magnifying-glass fa-2x"></i></span>
-            <span><i class="fa-solid fa-music fa-2x"></i></span>
-            <span>
-                <span class="screen-header__notification"></span>
-                <i class="fa-solid fa-gear fa-2x"></i>
-            </span>
+    <header class="alt-header">
+        <div class="alt-header__column">
+            <a href="more.html">
+                <i class="fa-solid fa-angle-left fa-3x"></i>
+            </a>
         </div>
-    </header>-->
+        <div class="alt-header__column">
+            <h1 class="alt-header__title">Settings</h1>
+        </div>
+        <div class="alt-header__column">
+            <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+        </div>
+    </header>
 
-    <main class="main-screen settings-screen">
+    <main class="main-screen">
+        <ul class="settings-list">
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fa-solid fa-bullhorn"></i>
+                    <span>Notices</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fa-solid fa-flask"></i>
+                    <span>Kokoa Lab</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fa-solid fa-circle-info"></i>
+                    <span>Version</span>
+                </div>
+                <div class="settings__setting-column">Lastest Version</div>
+            </li>
+        </ul>
     </main>
 
     <nav class="nav">
