--- a/find.html
+++ b/find.html
@@ -28,7 +28,7 @@
             <span><i class="fa-solid fa-magnifying-glass fa-2x"></i></span>
             <span>
                 <span class="screen-header__notification"></span>
-                <i class="fa-solid fa-gear fa-2x"></i>
+                <a href="settings.html"><i class="fa-solid fa-gear fa-2x"></i></a>
             </span>
         </div>
     </header>
