--- a/friends.html
+++ b/friends.html
@@ -95,6 +95,10 @@
         </ul>
     </nav>
 
+    <div id="spalsh-screen">
+        <i class="fa-solid fa-comment fa-2x"></i>
+    </div>
+
     <script src="https://kit.fontawesome.com/3948d4838a.js" crossorigin="anonymous">
     </script>
 </body>
